--- a/src/preloader.scss
+++ b/src/preloader.scss
@@ -1,9 +1,3 @@
-// body {
-// 	display: flex;
-// 	justify-content: center;
-// 	align-items: center;
-// 	// height: 100vh;
-// }
 
 *, *::before, *::after {
 	box-sizing: border-box;
@@ -20,7 +14,9 @@
 	position: relative;
 	z-index: 0;
 	width: 100vw;
+	// min-height: 100%;
 	height: 100vh;
+	height: calc(var(--vh, 1vh) * 100);
 	border-radius: 10px;
 	overflow: hidden;
 	padding: 2rem;
