--- a/src/main/vars.css
+++ b/src/main/vars.css
@@ -2,7 +2,7 @@
     --background-color: black ;
     --text-color: #dddddd;
     --text-font-family: Fira Sans,sans-serif;
-    --card-color: #181818;
-    --card-bgd-color:#202020;
+    --card-color: #0f0f0f;
+    --card-bgd-color:#0f0f0f;
     --hov-color: #38B2AC;
   }
