--- a/src/components/Experiance/Info/Info.module.css
+++ b/src/components/Experiance/Info/Info.module.css
@@ -4,61 +4,39 @@
     color: var(--color-black);
     text-align: left;
     background: var(--card-color);    
-    display: inline-block;
-    height: 300px;
+    height: 11rem;
     margin-top: 5%;
-    /* margin: 1rem; */
-    padding-left: 30px;
     position: relative;
     width: 100%;
     border-radius: 17px;
     font-family: var(--text-font-family);
-    font-size: 1.4vw;
-    box-shadow: 0 1px 2px var(--card-bgd-colorcolor); 
-    /* transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1); */
-    opacity: 0.8;
-    overflow: hidden
+    box-shadow: 0 1px 2px var(--card-bgd-color); 
+    opacity: 0.85;
+    overflow: hidden;
+    display:flex; 
+    align-items:center;
+    justify-content: center;
+    padding: 1rem
 } 
-
-  /* .Info::after {
-    content: "";
-    border-radius: 17px;
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    box-shadow: 0 5px 15px #262020;
-    opacity: 0;
-    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-  } */
-  
+ 
   .Info:hover {
     opacity: 1;
-    background-color:#100c08;
-  }
-  
-  /* .Info:hover::after {
-      opacity: 1;
-  } */
-  .Info h3{
-    margin-top: 0.5rem;
-    font-size: 1.5rem;
   }
 
-  .Info span{
-    display: flex;
-  }
-  .Info span p{
-    font-size: 0.75rem;
-    margin-left: 0.5rem;
-    margin-top: 2rem
+  .Info p{
+    margin-bottom:0.15rem
   }
 
-  .Info h5{
-    margin-top: -0.25rem;
-    font-size: 1rem;
+
+  .duration{
+    font-size: 0.6rem;
+    padding-top: 0.8rem;
+    padding-left: 1rem
+  } 
+
+  .title{
+    font-size: 1.3rem;
+    font-weight: bold;
   }
 
   .location{
@@ -66,8 +44,52 @@
     margin-top: 0.25rem;
   }
   .location p{
-    margin-top: auto;
     margin-left: 8px;
     font-size: 0.75rem;
     font-weight: bold;
   }
+
+  .designation{
+    font-size: 0.9rem;
+  }
+
+
+
+  @media only screen and (max-width: 768px) 
+  {
+    .Info{
+      height: auto;
+    }
+    .Content span{
+      /* display: block; */
+      padding: 0;
+    }
+    .title{
+      font-size: 0.88rem;
+      font-weight: bold;
+    }
+    .Info img{
+      width: 32px;
+      height: 18px;
+      margin-bottom: 13px;
+    }
+   .designation{
+      font-size: 0.79rem ;
+    }
+    .duration{
+      float: none;
+      margin-top: 5px;
+      margin-left: 10px
+    }
+  }
+
+  @media only screen and (max-width:430px) 
+  {
+    .Content span {
+      display: flex;
+    }
+    .duration{
+      float: right;
+      margin-left: 3.5px;
+    }
+  } 
