--- a/src/containers/ExperianceBuilder/ExperianceBuilder.module.css
+++ b/src/containers/ExperianceBuilder/ExperianceBuilder.module.css
@@ -5,24 +5,23 @@
     align-content: center;
     text-align: center;
     display: flex;
-    /* margin-top: 30vh; */
+    /* border: 0.05px solid white; */
+
 }
 
 .heading{
-    /* text-align: center; */
-    /* margin-bottom: 55px; */
     margin-right: -3%;
     margin-bottom: -7.85%;
     z-index: -1;
     font-size: 5rem;
-    /* z-index: ; */
     font-weight: bold;
     color: #2D2A2A;
     transition: 0.3s ease-in-out;
+    /* border: 0.05px solid white; */
+
 }
 
 .ExperianceBuilder:hover .heading{
-    /* .heading{ */
     color: var(--hov-color);   
 }
 
