--- a/src/components/ProjectScroll/ProjectScroll.module.css
+++ b/src/components/ProjectScroll/ProjectScroll.module.css
@@ -1,7 +1,7 @@
 @import '../../main//vars.css';
 
 .Projects {
-    background-color: var(--card-color);
+    background-color: black;
     min-width: 500px;
     height: auto; 
     overflow: hidden;
