--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -3,7 +3,7 @@
 .About {
     color: var(--text-color);
     font-family: var(--text-font-family);
-    opacity: 0.6;
+    opacity: 0.8;
     justify-content: end;
     font-size: 1.05rem;
 
@@ -11,7 +11,7 @@
 
 .heading{
     margin-left: -3.85%;
-    margin-bottom: -6.7%;
+    margin-bottom: -3.9%;
     z-index: -1;
     font-size: 5rem;
     font-weight: bold;
@@ -29,7 +29,7 @@
   }
 
   .Content:hover{
-      color:white
+      color:var(--text-color)
   }
   
   
@@ -39,6 +39,8 @@
         margin: 0;
         z-index: 0;
         font-size: 2.5rem;
+        color:var(--hov-color)
+
     }
   }
   
