--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -93,9 +93,6 @@ textarea::placeholder {
 
 
 .heading{
-  /* text-align: center; */
-  /* margin-bottom: 55px; */
-  /* margin-right: -3%; */
   margin-left: -4.55%;
   margin-bottom: -4.55%;
   z-index: -1;
@@ -118,6 +115,7 @@ textarea::placeholder {
       margin: 0;
       z-index: 0;
       font-size: 2.5rem;
+      color:var(--hov-color)
   }
 }
 
