--- a/src/containers/EducationBuilder/EducationBuilder.module.css
+++ b/src/containers/EducationBuilder/EducationBuilder.module.css
@@ -33,6 +33,8 @@
         margin: 0;
         z-index: 0;
         font-size: 2.5rem;
+        color:var(--hov-color)
+
     }
     /* .Content{
         margin-left: 0;
