--- a/src/containers/ProjectBuilder/ProjectBuilder.module.css
+++ b/src/containers/ProjectBuilder/ProjectBuilder.module.css
@@ -17,7 +17,6 @@
 }
 
 .ProjectBuilder:hover .heading{
-    /* .heading{ */
     color: var(--hov-color);   
 }
 
@@ -29,6 +28,8 @@
         margin: 0;
         z-index: 0;
         font-size: 2.5rem;
+        color:var(--hov-color)
+
     }
 
 }
