--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -10,13 +10,8 @@
 }
 
 .heading{
-    margin-left: -3.85%;
-    margin-bottom: -3.9%;
-    z-index: -1;
-    font-size: 5rem;
-    font-weight: bold;
-    color: #2D2A2A;
-    transition: 0.3s ease-in-out;
+    /* margin-left: -3.85%; */
+    margin-bottom: -5%;
   }
   
   .About:hover .heading{
@@ -31,17 +26,4 @@
   .Content:hover{
       color:var(--text-color)
   }
-  
-  
-  @media only screen and (max-width: 992px) {
-  
-    .heading {
-        margin: 0;
-        z-index: 0;
-        font-size: 2.5rem;
-        color:var(--hov-color)
-
-    }
-  }
-  
   
