--- a/src/containers/EducationBuilder/EducationBuilder.module.css
+++ b/src/containers/EducationBuilder/EducationBuilder.module.css
@@ -10,33 +10,12 @@
     
 }
 
-.heading{
-    margin-left: -4%;
+ .heading{
+    /* margin-left: -4%; */
     margin-bottom: -5.85%;
-    z-index: -1;
-    font-size: 5rem;
-    font-weight: bold;
-    color: #2D2A2A;
-    transition: 0.3s ease-in-out;
-    /* border: 0.05px solid white; */
 
-}
+} 
 
 .ExperianceBuilder:hover .heading{
     color: var(--hov-color);   
-}
-
-
-@media only screen and (max-width: 992px) {
-
-    .heading {
-        margin: 0;
-        z-index: 0;
-        font-size: 2.5rem;
-        color:var(--hov-color)
-
-    }
-    /* .Content{
-        margin-left: 0;
-    } */
 }
