--- a/src/containers/ProjectBuilder/ProjectBuilder.module.css
+++ b/src/containers/ProjectBuilder/ProjectBuilder.module.css
@@ -7,29 +7,11 @@
 
 
 .heading{
-    margin-left: -3%;
-    margin-bottom: -7.85%;
-    z-index: -1;
-    font-size: 5rem;
-    font-weight: bold;
-    color: #2D2A2A;
-    transition: 0.3s ease-in-out;
+    /* margin-left: -3%; */
+    margin-bottom: -6.85%;
+
 }
 
 .ProjectBuilder:hover .heading{
     color: var(--hov-color);   
-}
-
-
-@media only screen and (max-width: 992px) {
-
-
-    .heading {
-        margin: 0;
-        z-index: 0;
-        font-size: 2.5rem;
-        color:var(--hov-color)
-
-    }
-
 }
