--- a/src/index.css
+++ b/src/index.css
@@ -63,3 +63,25 @@ html{
   background-size: cover;
   
 }
+
+.section-heading{
+  z-index: 100;
+  font-size: 4.2rem;
+  font-weight: bold;
+  color: #2D2A2A;
+  transition: 0.3s ease-in-out;
+}
+
+.section-heading:hover {
+  color: var(--hov-color);   
+}
+
+@media only screen and (max-width: 992px) {
+
+  .section-heading {
+      margin: 0;
+      z-index: 0;
+      font-size: 2.5rem;
+      color:var(--hov-color)
+  }
+}
